crates/monosecret/src/provider/snapshots/monosecret__provider__gcsm__tests__format_secret_name_builds_valid_name.snap
---
source: crates/monosecret/src/provider/gcsm.rs
expression: name
---
monosecret-my-project-default-API_KEY
