crates/monosecret/src/provider/snapshots/monosecret__provider__gcsm__tests__format_secret_name_rejects_empty_component.snap
---
source: crates/monosecret/src/provider/gcsm.rs
expression: errors
---
Provider operation failed: project cannot be empty
Provider operation failed: profile cannot be empty
Provider operation failed: key cannot be empty
