crates/monosecret/src/provider/snapshots/monosecret__provider__gcsm__tests__format_secret_name_rejects_invalid_characters.snap
---
source: crates/monosecret/src/provider/gcsm.rs
expression: errors
---
Provider operation failed: project contains invalid character '/'. Only alphanumeric characters, underscores, and hyphens are allowed
Provider operation failed: key contains invalid character ' '. Only alphanumeric characters, underscores, and hyphens are allowed
