crates/monosecret/src/provider/snapshots/monosecret__provider__gcsm__tests__format_secret_name_rejects_overlong_name.snap
---
source: crates/monosecret/src/provider/gcsm.rs
expression: err.to_string()
---
Provider operation failed: Secret name too long: 324 characters (max 255)
