crates/monosecret/src/provider/snapshots/monosecret__provider__gcsm__tests__set_rejects_invalid_key_before_network.snap
---
source: crates/monosecret/src/provider/gcsm.rs
expression: err.to_string()
---
Provider operation failed: key contains invalid character '/'. Only alphanumeric characters, underscores, and hyphens are allowed
